--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = librespeed-speedtest
 	url = https://github.com/librespeed/speedtest.git
 	branch = master
+[submodule "speedtest"]
+	path = speedtest
+	url = https://github.com/librespeed/speedtest.git
